fixed the current forecast

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <button type="submit">submit</button>
   </form>
   <main>
-    <div>
+    <div class="col-12">
         Today's Forecast
     </div>
     <div class="todayForecast">
-        <div id="todayForecast">
+        <div class="col bg-primary text-white ml-3 mb-3 rounded todayForecast" id="todayForecast">
 
         </div>
 
