--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-<link rel="stylesheet" href="./assets/css/styles.css"/>
+<link rel="stylesheet" href="./assets/style.css"/>
 
-  <title>Document</title>
+  <title>Mitch's Weather Dashboard</title>
 </head>
 <body>
   <form id="searchForm">
-    <label for="city">Search City</label><br>
-    <input type="text" id="city" name="city"><br>
-    <button type="submit">submit</button>
+    <label for="city" class="ml-3 h1">Search City</label><br>
+    <input type="text" id="city" name="city" class="ml-3"><br>
+    <button type="submit" class="ml-3">submit</button>
   </form>
   <main>
-    <div class="col-12">
+    <div class="col-12 h3">
         Today's Forecast
     </div>
     <div class="todayForecast">
         <div class="col bg-primary text-white ml-3 mb-3 rounded todayForecast" id="todayForecast">
+           
 
         </div>
 
     </div>
     <div class="row">
         <div class="col-12">
-                <h3>
+                <h3 class="ml-3">
                     5 Day Forecast
                 </h3>
         </div>
