--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <div class="col bg-primary text-white ml-3 mb-3 rounded forecast"></div>
         <div class="col bg-primary text-white ml-3 mb-3 rounded forecast"></div>
     </div>
+
+    <div class="pastCities" id="pastCities"> 
+
+    </div>
   </main>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <!--This is get us the images we need-->
