--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <button type="submit" class="ml-3">submit</button>
   </form>
   <main>
+    <div class="pastCities ml-3" id="pastCities"> 
+
+    </div>
     <div class="col-12 h3">
         Today's Forecast
     </div>
@@ -45,9 +48,7 @@
         <div class="col bg-primary text-white ml-3 mb-3 rounded forecast"></div>
     </div>
 
-    <div class="pastCities" id="pastCities"> 
-
-    </div>
+    
   </main>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <!--This is get us the images we need-->
