adding clear search button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <button type="submit" class="ml-3">submit</button>
   </form>
   <main>
+    <h3 class="ml-3">Past Searches<button id="clearSearches" class="ml-3">Clear Searches</button></h3>
+
     <div class="pastCities ml-3" id="pastCities"> 
 
     </div>
