fixed storage issue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <form id="searchForm">
     <label for="city" class="ml-3 h1">Search City</label><br>
     <input type="text" id="city" name="city" class="ml-3"><br>
-    <button type="submit" class="ml-3">submit</button>
+    <button type="submit" class="ml-3">Search</button>
   </form>
   <main>
     <h3 class="ml-3">Past Searches<button id="clearSearches" class="ml-3">Clear Searches</button></h3>
